--- a/analysis/00_plot_RGB.ipynb
+++ b/analysis/00_plot_RGB.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,10 +68,17 @@
     "\n",
     "    # Plot the RGB image using matplotlib's imshow\n",
     "    rgb_plot = plt.imshow(rgb_image, extent=[lon.min(), lon.max(), lat.min(), lat.max()])\n",
+    "    \n",
+    "    pixel_lat = 48.464462\n",
+    "    pixel_lon = -122.959918\n",
+    "    plt.plot(pixel_lon, pixel_lat, 'ro', markersize=5, label='Jessica\\'s Camera')\n",
+    "    plt.legend()\n",
     "    plt.xlabel('Longitude')\n",
     "    plt.ylabel('Latitude')\n",
     "    plt.title('GOES Day Cloud Phase RGB Composite - ' + date + ' ' + time_of_day + ' UTC')\n",
     "    plt.axis('on')  # Show the axis\n",
+    "    # size\n",
+    "    plt.gcf().set_size_inches(10, 4)  # Set the figure size to 10x10 inches\n",
     "\n",
     "    # Save the plot as a PNG file\n",
     "    filename = f'./plots/goes_RGB_{date}_{time_of_day}.png'\n",
@@ -163,78 +170,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated RGB image for 2022-08-01T14:00:00\n",
-      "Generated RGB image for 2022-08-01T14:10:00\n",
-      "Generated RGB image for 2022-08-01T14:20:00\n",
-      "Generated RGB image for 2022-08-01T14:30:00\n",
-      "Generated RGB image for 2022-08-01T14:40:00\n",
-      "Generated RGB image for 2022-08-01T14:50:00\n",
-      "Generated RGB image for 2022-08-01T15:00:00\n",
-      "Generated RGB image for 2022-08-01T15:10:00\n",
-      "Generated RGB image for 2022-08-01T15:20:00\n",
-      "Generated RGB image for 2022-08-01T15:30:00\n",
-      "Generated RGB image for 2022-08-01T15:40:00\n",
-      "Generated RGB image for 2022-08-01T15:50:00\n",
-      "Generated RGB image for 2022-08-01T16:00:00\n",
-      "Generated RGB image for 2022-08-01T16:10:00\n",
-      "Generated RGB image for 2022-08-01T16:20:00\n",
-      "Generated RGB image for 2022-08-01T16:30:00\n",
-      "Generated RGB image for 2022-08-01T16:40:00\n",
-      "Generated RGB image for 2022-08-01T16:50:00\n",
-      "Generated RGB image for 2022-08-01T17:00:00\n",
-      "Generated RGB image for 2022-08-01T17:10:00\n",
-      "Generated RGB image for 2022-08-01T17:20:00\n",
-      "Generated RGB image for 2022-08-01T17:30:00\n",
-      "Generated RGB image for 2022-08-01T17:40:00\n",
-      "Generated RGB image for 2022-08-01T17:50:00\n",
-      "Generated RGB image for 2022-08-01T18:00:00\n",
-      "Generated RGB image for 2022-08-01T18:10:00\n",
-      "Generated RGB image for 2022-08-01T18:20:00\n",
-      "Generated RGB image for 2022-08-01T18:30:00\n",
-      "Generated RGB image for 2022-08-01T18:40:00\n",
-      "Generated RGB image for 2022-08-01T18:50:00\n",
-      "Generated RGB image for 2022-08-01T19:00:00\n",
-      "Generated RGB image for 2022-08-01T19:10:00\n",
-      "Generated RGB image for 2022-08-01T19:20:00\n",
-      "Generated RGB image for 2022-08-01T19:30:00\n",
-      "Generated RGB image for 2022-08-01T19:40:00\n",
-      "Generated RGB image for 2022-08-01T19:50:00\n",
-      "Generated RGB image for 2022-08-01T20:00:00\n",
-      "Generated RGB image for 2022-08-01T20:10:00\n",
-      "Generated RGB image for 2022-08-01T20:20:00\n",
-      "Generated RGB image for 2022-08-01T20:30:00\n",
-      "Generated RGB image for 2022-08-01T20:40:00\n",
-      "Generated RGB image for 2022-08-01T20:50:00\n",
-      "Generated RGB image for 2022-08-01T21:00:00\n",
-      "Generated RGB image for 2022-08-01T21:10:00\n",
-      "Generated RGB image for 2022-08-01T21:20:00\n",
-      "Generated RGB image for 2022-08-01T21:30:00\n",
-      "Generated RGB image for 2022-08-01T21:40:00\n",
-      "Generated RGB image for 2022-08-01T21:50:00\n",
-      "Generated RGB image for 2022-08-01T22:00:00\n",
-      "Generated RGB image for 2022-08-01T22:10:00\n",
-      "Generated RGB image for 2022-08-01T22:20:00\n",
-      "Generated RGB image for 2022-08-01T22:30:00\n",
-      "Generated RGB image for 2022-08-01T22:40:00\n",
-      "Generated RGB image for 2022-08-01T22:50:00\n",
-      "Generated RGB image for 2022-08-01T23:00:00\n",
-      "Generated RGB image for 2022-08-01T23:10:00\n",
-      "Generated RGB image for 2022-08-01T23:20:00\n",
-      "Generated RGB image for 2022-08-01T23:30:00\n",
-      "Generated RGB image for 2022-08-01T23:40:00\n",
-      "Generated RGB image for 2022-08-01T23:50:00\n"
+      "Generated RGB image for 2022-08-07T14:00:00\n",
+      "Generated RGB image for 2022-08-07T14:10:00\n",
+      "Generated RGB image for 2022-08-07T14:20:00\n",
+      "Generated RGB image for 2022-08-07T14:30:00\n",
+      "Generated RGB image for 2022-08-07T14:40:00\n",
+      "Generated RGB image for 2022-08-07T14:50:00\n",
+      "Generated RGB image for 2022-08-07T15:00:00\n",
+      "Generated RGB image for 2022-08-07T15:10:00\n",
+      "Generated RGB image for 2022-08-07T15:20:00\n",
+      "Generated RGB image for 2022-08-07T15:30:00\n",
+      "Generated RGB image for 2022-08-07T15:40:00\n",
+      "Generated RGB image for 2022-08-07T15:50:00\n",
+      "Generated RGB image for 2022-08-07T16:00:00\n",
+      "Generated RGB image for 2022-08-07T16:10:00\n",
+      "Generated RGB image for 2022-08-07T16:20:00\n",
+      "Generated RGB image for 2022-08-07T16:30:00\n",
+      "Generated RGB image for 2022-08-07T16:40:00\n",
+      "Generated RGB image for 2022-08-07T16:50:00\n",
+      "Generated RGB image for 2022-08-07T17:00:00\n",
+      "Generated RGB image for 2022-08-07T17:10:00\n",
+      "Generated RGB image for 2022-08-07T17:20:00\n",
+      "Generated RGB image for 2022-08-07T17:30:00\n",
+      "Generated RGB image for 2022-08-07T17:40:00\n",
+      "Generated RGB image for 2022-08-07T17:50:00\n",
+      "Generated RGB image for 2022-08-07T18:00:00\n",
+      "Generated RGB image for 2022-08-07T18:10:00\n",
+      "Generated RGB image for 2022-08-07T18:20:00\n",
+      "Generated RGB image for 2022-08-07T18:30:00\n",
+      "Generated RGB image for 2022-08-07T18:40:00\n",
+      "Generated RGB image for 2022-08-07T18:50:00\n",
+      "Generated RGB image for 2022-08-07T19:00:00\n",
+      "Generated RGB image for 2022-08-07T19:10:00\n",
+      "Generated RGB image for 2022-08-07T19:20:00\n",
+      "Generated RGB image for 2022-08-07T19:30:00\n",
+      "Generated RGB image for 2022-08-07T19:40:00\n",
+      "Generated RGB image for 2022-08-07T19:50:00\n",
+      "Generated RGB image for 2022-08-07T20:00:00\n",
+      "Generated RGB image for 2022-08-07T20:10:00\n",
+      "Generated RGB image for 2022-08-07T20:20:00\n",
+      "Generated RGB image for 2022-08-07T20:30:00\n",
+      "Generated RGB image for 2022-08-07T20:40:00\n",
+      "Generated RGB image for 2022-08-07T20:50:00\n",
+      "Generated RGB image for 2022-08-07T21:00:00\n",
+      "Generated RGB image for 2022-08-07T21:10:00\n",
+      "Generated RGB image for 2022-08-07T21:20:00\n",
+      "Generated RGB image for 2022-08-07T21:30:00\n",
+      "Generated RGB image for 2022-08-07T21:40:00\n",
+      "Generated RGB image for 2022-08-07T21:50:00\n",
+      "Generated RGB image for 2022-08-07T22:00:00\n",
+      "Generated RGB image for 2022-08-07T22:10:00\n",
+      "Generated RGB image for 2022-08-07T22:20:00\n",
+      "Generated RGB image for 2022-08-07T22:30:00\n",
+      "Generated RGB image for 2022-08-07T22:40:00\n",
+      "Generated RGB image for 2022-08-07T22:50:00\n",
+      "Generated RGB image for 2022-08-07T23:00:00\n",
+      "Generated RGB image for 2022-08-07T23:10:00\n",
+      "Generated RGB image for 2022-08-07T23:20:00\n",
+      "Generated RGB image for 2022-08-07T23:30:00\n",
+      "Generated RGB image for 2022-08-07T23:40:00\n",
+      "Generated RGB image for 2022-08-07T23:50:00\n"
      ]
     }
    ],
    "source": [
-    "date = '20220801'\n",
+    "date = '20220807'\n",
     "start_time = '1400'\n",
     "end_time = '2355'\n",
     "\n",
