--- a/processing/00_goes_rad_corrections.ipynb
+++ b/processing/00_goes_rad_corrections.ipynb
@@ -968,31 +968,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting 7/13\n",
-      "Looking for NetCDF files in /storage/cdalden/goes/washington/goes17/2022/7/13/\n",
-      "Processing goes17_C02_washington_20220713.zarr...\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "Starting 7/14\n",
+      "Looking for NetCDF files in /storage/cdalden/goes/washington/goes17/2022/7/14/\n",
+      "WARNING: 852 files found in /storage/cdalden/goes/washington/goes17/2022/7/14/, expected 864. Not skipping, just a warning\n",
+      "Processing goes17_C02_washington_20220714.zarr...\n",
+      "Beep beep, here comes the garbage truck! 🚛\n",
+      "Finished\n",
+      "🛰️\n",
+      "Processing goes17_C05_washington_20220714.zarr...\n",
+      "Beep beep, here comes the garbage truck! 🚛\n",
+      "Finished\n",
+      "🛰️\n",
+      "Processing goes17_C13_washington_20220714.zarr...\n",
+      "Beep beep, here comes the garbage truck! 🚛\n",
+      "Finished\n",
+      "🛰️\n"
      ]
     }
    ],
    "source": [
     "in_dir = f'/storage/cdalden/goes/washington/'\n",
     "channel_list = ['C02', 'C05', 'C13']\n",
-    "utils.goes_nc_to_zarr(in_dir, channel_list, 13, 31, 7, 2022, 'washington', 'goes17', surprise=True)"
+    "utils.goes_nc_to_zarr(in_dir, channel_list, 14, 14, 7, 2022, 'washington', 'goes17', surprise=True)"
    ]
   },
   {
