added in september data

--- a/analysis/goes_eval_w_camera.ipynb
+++ b/analysis/goes_eval_w_camera.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,19 +47,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "camera_data = pd.read_csv('CP2022photos.csv', index_col=0, parse_dates=True)\n",
     "camera_data.index = camera_data.index.tz_localize('America/Los_Angeles')\n",
     "camera_data.index = camera_data.index.round('5min')\n",
-    "camera_data = camera_data.loc['2022-07-13':'2022-08-07']"
+    "camera_data = camera_data.loc['2022-07-13':'2022-09-30']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,22 +130,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "goes_data_sep = {}\n",
     "goes_df_sep = {}\n",
-    "for i in range(1, 10):\n",
-    "    key = f\"goes_data_sep{i}\"  # Dynamically generate the key\n",
-    "    filename = f\"/storage/cdalden/goes/washington/goes17/rgb_composite/goes17_C02_C05_C13_rgb_washington_2022090{i}.nc\"  # Dynamically generate the filename\n",
+    "for i in range(1, 23):\n",
+    "    # Make i two digits\n",
+    "    day = f\"{i:02}\"\n",
+    "    key = f\"goes_data_sep{day}\"  # Dynamically generate the key\n",
+    "    filename = f\"/storage/cdalden/goes/washington/goes17/rgb_composite/goes17_C02_C05_C13_rgb_washington_202209{day}.nc\"  # Dynamically generate the filename\n",
     "    goes_data_sep[key] = xr.open_dataset(filename)\n",
     "\n",
     "    # select data near 48.5N and -123.5W\n",
     "    lat = 48.464462\n",
     "    lon = -122.85 # offset by ~0.1deg (2 grid cells, ) to east since that is where camera looks\n",
     "    # Select data and convert to dataframe\n",
-    "    df_key = f\"goes_df_sep{i}\"\n",
+    "    df_key = f\"goes_df_sep{day}\"\n",
     "    goes_df_sep[df_key] = (\n",
     "        goes_data_sep[key]\n",
     "        .sel(latitude=lat, longitude=lon, method='nearest')\n",
@@ -165,7 +167,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>green</th>\n",
+       "      <th>blue</th>\n",
+       "      <th>red</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>t</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-08-31 17:00:00-07:00</th>\n",
+       "      <td>0.075575</td>\n",
+       "      <td>0.009040</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-08-31 17:10:00-07:00</th>\n",
+       "      <td>0.073576</td>\n",
+       "      <td>0.009040</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-08-31 17:10:00-07:00</th>\n",
+       "      <td>0.068380</td>\n",
+       "      <td>0.004683</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-08-31 17:20:00-07:00</th>\n",
+       "      <td>0.070378</td>\n",
+       "      <td>0.000325</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-08-31 17:20:00-07:00</th>\n",
+       "      <td>0.065981</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-09-22 16:40:00-07:00</th>\n",
+       "      <td>0.106339</td>\n",
+       "      <td>0.099220</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-09-22 16:40:00-07:00</th>\n",
+       "      <td>0.082231</td>\n",
+       "      <td>0.028131</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-09-22 16:50:00-07:00</th>\n",
+       "      <td>0.252558</td>\n",
+       "      <td>0.273710</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-09-22 16:50:00-07:00</th>\n",
+       "      <td>0.068790</td>\n",
+       "      <td>0.081986</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-09-22 17:00:00-07:00</th>\n",
+       "      <td>0.052191</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3608 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              green      blue  red\n",
+       "t                                                 \n",
+       "2022-08-31 17:00:00-07:00  0.075575  0.009040  0.0\n",
+       "2022-08-31 17:10:00-07:00  0.073576  0.009040  0.0\n",
+       "2022-08-31 17:10:00-07:00  0.068380  0.004683  0.0\n",
+       "2022-08-31 17:20:00-07:00  0.070378  0.000325  0.0\n",
+       "2022-08-31 17:20:00-07:00  0.065981  0.000000  0.0\n",
+       "...                             ...       ...  ...\n",
+       "2022-09-22 16:40:00-07:00  0.106339  0.099220  0.0\n",
+       "2022-09-22 16:40:00-07:00  0.082231  0.028131  0.0\n",
+       "2022-09-22 16:50:00-07:00  0.252558  0.273710  0.0\n",
+       "2022-09-22 16:50:00-07:00  0.068790  0.081986  0.0\n",
+       "2022-09-22 17:00:00-07:00  0.052191  0.000000  0.0\n",
+       "\n",
+       "[3608 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "goes_df_sep_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -173,14 +311,19 @@
      "output_type": "stream",
      "text": [
       "clouds\n",
-      "b     601\n",
-      "s     206\n",
-      "f      43\n",
-      "sc     24\n",
+      "b     808\n",
+      "s     428\n",
+      "f      91\n",
+      "sm     38\n",
+      "sc     34\n",
+      "m      26\n",
+      "fs     14\n",
+      "sr     12\n",
       "r      10\n",
       "cr      8\n",
       "c       2\n",
-      "fs      2\n",
+      "h       2\n",
+      "f!      2\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -204,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -240,18 +383,15 @@
      "output_type": "stream",
      "text": [
       "Decision Tree Rules:\n",
-      " |--- green <= 0.13\n",
+      " |--- green <= 0.12\n",
       "|   |--- red <= 0.00\n",
-      "|   |   |--- blue <= 0.26\n",
-      "|   |   |   |--- class: 1\n",
-      "|   |   |--- blue >  0.26\n",
+      "|   |   |--- green <= 0.01\n",
+      "|   |   |   |--- class: 0\n",
+      "|   |   |--- green >  0.01\n",
       "|   |   |   |--- class: 1\n",
       "|   |--- red >  0.00\n",
-      "|   |   |--- blue <= 0.03\n",
-      "|   |   |   |--- class: 0\n",
-      "|   |   |--- blue >  0.03\n",
-      "|   |   |   |--- class: 0\n",
-      "|--- green >  0.13\n",
+      "|   |   |--- class: 0\n",
+      "|--- green >  0.12\n",
       "|   |--- green <= 0.13\n",
       "|   |   |--- class: 0\n",
       "|   |--- green >  0.13\n",
@@ -261,12 +401,12 @@
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      0.84      0.92        64\n",
-      "           1       0.92      1.00      0.96       116\n",
+      "           0       0.99      0.82      0.90       123\n",
+      "           1       0.89      0.99      0.94       172\n",
       "\n",
-      "    accuracy                           0.94       180\n",
-      "   macro avg       0.96      0.92      0.94       180\n",
-      "weighted avg       0.95      0.94      0.94       180\n",
+      "    accuracy                           0.92       295\n",
+      "   macro avg       0.94      0.91      0.92       295\n",
+      "weighted avg       0.93      0.92      0.92       295\n",
       "\n"
      ]
     }
@@ -303,17 +443,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.95\n",
-      "F1 Score: 0.961038961038961\n",
-      "Precision: 0.9652173913043478\n",
-      "Recall: 0.9568965517241379\n"
+      "Accuracy: 0.9220338983050848\n",
+      "F1 Score: 0.936986301369863\n",
+      "Precision: 0.8860103626943006\n",
+      "Recall: 0.9941860465116279\n"
      ]
     }
    ],
@@ -327,14 +467,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 Score based on thresholds: 0.6878306878306878\n"
+      "F1 Score based on thresholds: 0.7468354430379747\n"
      ]
     }
    ],
