--- a/analysis/02_compare_to_surface_obs.ipynb
+++ b/analysis/02_compare_to_surface_obs.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Notebook 4 - Evaluating our GOES cloud thresholding\n",
+    "## Notebook 2\n",
+    " - Evaluating our GOES cloud thresholding\n",
     "\n",
     "To test how well the thresholding is working from GOES radiances/brightnesses, let's pull the pixel for Kettle Ponds and compare to observed radiative fluxes for the SAIL/SPLASH/SoS site.\n",
     "\n",
