--- a/analysis/04_goes_eval_w_camera.ipynb
+++ b/analysis/04_goes_eval_w_camera.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,19 +47,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "camera_data = pd.read_csv('CP2022photos.csv', index_col=0, parse_dates=True)\n",
+    "# For Cattle Point\n",
+    "lat = 48.464462\n",
+    "lon = -122.909918 # offset by ~0.05deg (1 grid cell) to east since that is where camera looks\n",
+    "cp_camera_data = pd.read_csv('CP2022photos.csv', index_col=0, parse_dates=True)\n",
+    "camera_data = cp_camera_data\n",
+    "\n",
+    "# For Friday Harbor\n",
+    "# lat = 48.546348\n",
+    "# lon = -123.002626 # offset by ~0.05deg (1 grid cells) to east since that is where camera looks\n",
+    "# fhl_camera_data = pd.read_csv('FHL2022photos.csv', index_col=0, parse_dates=True)\n",
+    "# camera_data = fhl_camera_data\n",
+    "\n",
     "camera_data.index = camera_data.index.tz_localize('America/Los_Angeles')\n",
     "camera_data.index = camera_data.index.round('5min')\n",
-    "camera_data = camera_data.loc['2022-07-13':'2022-09-30']"
+    "camera_data = camera_data.loc['2022-07-13':'2022-09-30']\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,9 +82,6 @@
     "    filename = f\"/storage/cdalden/goes/washington/goes17/rgb_composite/goes17_C02_C05_C13_rgb_washington_202207{i}.nc\"  # Dynamically generate the filename\n",
     "    goes_data_july[key] = xr.open_dataset(filename)\n",
     "\n",
-    "    # select data near 48.5N and -123.5W\n",
-    "    lat = 48.464462\n",
-    "    lon = -122.9 # offset by ~0.05deg (1 grid cell) to east since that is where camera looks\n",
     "    # Select data and convert to dataframe\n",
     "    df_key = f\"goes_df_july{i}\"\n",
     "    goes_df_july[df_key] = (\n",
@@ -95,20 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "goes_data_aug = {}\n",
     "goes_df_aug = {}\n",
-    "for i in range(1, 8):\n",
-    "    key = f\"goes_data_aug{i}\"  # Dynamically generate the key\n",
-    "    filename = f\"/storage/cdalden/goes/washington/goes17/rgb_composite/goes17_C02_C05_C13_rgb_washington_2022080{i}.nc\"  # Dynamically generate the filename\n",
+    "for i in range(1, 32):\n",
+    "    # Make i two digits\n",
+    "    day = f\"{i:02}\"\n",
+    "    key = f\"goes_data_aug{day}\"\n",
+    "    filename = f\"/storage/cdalden/goes/washington/goes17/rgb_composite/goes17_C02_C05_C13_rgb_washington_202208{day}.nc\"  # Dynamically generate the filename\n",
     "    goes_data_aug[key] = xr.open_dataset(filename)\n",
     "\n",
-    "    # select data near 48.5N and -123.5W\n",
-    "    lat = 48.464462\n",
-    "    lon = -122.9 # offset by ~0.05deg (1 grid cell) to east since that is where camera looks\n",
     "    # Select data and convert to dataframe\n",
     "    df_key = f\"goes_df_aug{i}\"\n",
     "    goes_df_aug[df_key] = (\n",
@@ -130,22 +138,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "goes_data_sep = {}\n",
     "goes_df_sep = {}\n",
-    "for i in range(1, 23):\n",
+    "for i in range(1, 31):\n",
     "    # Make i two digits\n",
     "    day = f\"{i:02}\"\n",
     "    key = f\"goes_data_sep{day}\"  # Dynamically generate the key\n",
     "    filename = f\"/storage/cdalden/goes/washington/goes17/rgb_composite/goes17_C02_C05_C13_rgb_washington_202209{day}.nc\"  # Dynamically generate the filename\n",
     "    goes_data_sep[key] = xr.open_dataset(filename)\n",
     "\n",
-    "    # select data near 48.5N and -123.5W\n",
-    "    lat = 48.464462\n",
-    "    lon = -122.85 # offset by ~0.1deg (2 grid cells, ) to east since that is where camera looks\n",
     "    # Select data and convert to dataframe\n",
     "    df_key = f\"goes_df_sep{day}\"\n",
     "    goes_df_sep[df_key] = (\n",
@@ -167,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -205,32 +210,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2022-08-31 17:00:00-07:00</th>\n",
-       "      <td>0.075575</td>\n",
-       "      <td>0.009040</td>\n",
+       "      <td>0.093163</td>\n",
+       "      <td>0.216027</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-08-31 17:10:00-07:00</th>\n",
-       "      <td>0.073576</td>\n",
-       "      <td>0.009040</td>\n",
+       "      <td>0.092763</td>\n",
+       "      <td>0.200775</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-08-31 17:10:00-07:00</th>\n",
-       "      <td>0.068380</td>\n",
-       "      <td>0.004683</td>\n",
+       "      <td>0.085568</td>\n",
+       "      <td>0.150663</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-08-31 17:20:00-07:00</th>\n",
-       "      <td>0.070378</td>\n",
-       "      <td>0.000325</td>\n",
+       "      <td>0.085568</td>\n",
+       "      <td>0.152842</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-08-31 17:20:00-07:00</th>\n",
-       "      <td>0.065981</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.088766</td>\n",
+       "      <td>0.205131</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -240,59 +245,59 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-09-22 16:40:00-07:00</th>\n",
-       "      <td>0.106339</td>\n",
-       "      <td>0.099220</td>\n",
+       "      <th>2022-09-30 16:40:00-07:00</th>\n",
+       "      <td>0.083432</td>\n",
+       "      <td>0.186614</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-09-22 16:40:00-07:00</th>\n",
-       "      <td>0.082231</td>\n",
-       "      <td>0.028131</td>\n",
+       "      <th>2022-09-30 16:40:00-07:00</th>\n",
+       "      <td>0.079100</td>\n",
+       "      <td>0.163025</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-09-22 16:50:00-07:00</th>\n",
-       "      <td>0.252558</td>\n",
-       "      <td>0.273710</td>\n",
+       "      <th>2022-09-30 16:50:00-07:00</th>\n",
+       "      <td>0.074773</td>\n",
+       "      <td>0.158736</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-09-22 16:50:00-07:00</th>\n",
-       "      <td>0.068790</td>\n",
-       "      <td>0.081986</td>\n",
+       "      <th>2022-09-30 16:50:00-07:00</th>\n",
+       "      <td>0.070445</td>\n",
+       "      <td>0.148013</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-09-22 17:00:00-07:00</th>\n",
-       "      <td>0.052191</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>2022-09-30 17:00:00-07:00</th>\n",
+       "      <td>0.069265</td>\n",
+       "      <td>0.148013</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3608 rows × 3 columns</p>\n",
+       "<p>4920 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                              green      blue  red\n",
        "t                                                 \n",
-       "2022-08-31 17:00:00-07:00  0.075575  0.009040  0.0\n",
-       "2022-08-31 17:10:00-07:00  0.073576  0.009040  0.0\n",
-       "2022-08-31 17:10:00-07:00  0.068380  0.004683  0.0\n",
-       "2022-08-31 17:20:00-07:00  0.070378  0.000325  0.0\n",
-       "2022-08-31 17:20:00-07:00  0.065981  0.000000  0.0\n",
+       "2022-08-31 17:00:00-07:00  0.093163  0.216027  0.0\n",
+       "2022-08-31 17:10:00-07:00  0.092763  0.200775  0.0\n",
+       "2022-08-31 17:10:00-07:00  0.085568  0.150663  0.0\n",
+       "2022-08-31 17:20:00-07:00  0.085568  0.152842  0.0\n",
+       "2022-08-31 17:20:00-07:00  0.088766  0.205131  0.0\n",
        "...                             ...       ...  ...\n",
-       "2022-09-22 16:40:00-07:00  0.106339  0.099220  0.0\n",
-       "2022-09-22 16:40:00-07:00  0.082231  0.028131  0.0\n",
-       "2022-09-22 16:50:00-07:00  0.252558  0.273710  0.0\n",
-       "2022-09-22 16:50:00-07:00  0.068790  0.081986  0.0\n",
-       "2022-09-22 17:00:00-07:00  0.052191  0.000000  0.0\n",
+       "2022-09-30 16:40:00-07:00  0.083432  0.186614  0.0\n",
+       "2022-09-30 16:40:00-07:00  0.079100  0.163025  0.0\n",
+       "2022-09-30 16:50:00-07:00  0.074773  0.158736  0.0\n",
+       "2022-09-30 16:50:00-07:00  0.070445  0.148013  0.0\n",
+       "2022-09-30 17:00:00-07:00  0.069265  0.148013  0.0\n",
        "\n",
-       "[3608 rows x 3 columns]"
+       "[4920 rows x 3 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -311,19 +316,26 @@
      "output_type": "stream",
      "text": [
       "clouds\n",
-      "b     808\n",
-      "s     428\n",
-      "f      91\n",
-      "sm     38\n",
-      "sc     34\n",
-      "m      26\n",
-      "fs     14\n",
-      "sr     12\n",
-      "r      10\n",
-      "cr      8\n",
-      "c       2\n",
-      "h       2\n",
-      "f!      2\n",
+      "b     1181\n",
+      "s      790\n",
+      "rb     731\n",
+      "f      183\n",
+      "bh     170\n",
+      "cb     113\n",
+      "sc      90\n",
+      "sb      61\n",
+      "sm      38\n",
+      "fb      32\n",
+      "fs      30\n",
+      "m       26\n",
+      "sr      14\n",
+      "r       10\n",
+      "cr       8\n",
+      "f!       4\n",
+      "b!       4\n",
+      "sh       4\n",
+      "h        2\n",
+      "c        2\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -339,7 +351,7 @@
     "data = data[data['clouds'].str.len() <= 2]\n",
     "\n",
     "# Drop times when bluesky and string is 2 characters long (i.e., bluesky + 1 cloud type)\n",
-    "data = data[~((data['clouds'].str.len() == 2) & (data['clouds'].str.contains('b')))]\n",
+    "# data = data[~((data['clouds'].str.len() == 2) & (data['clouds'].str.contains('b')))]\n",
     "\n",
     "print(data['clouds'].value_counts(\n",
     "))"
@@ -347,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -383,30 +395,16 @@
      "output_type": "stream",
      "text": [
       "Decision Tree Rules:\n",
-      " |--- green <= 0.12\n",
+      " |--- green <= 0.15\n",
       "|   |--- red <= 0.00\n",
-      "|   |   |--- green <= 0.01\n",
-      "|   |   |   |--- class: 0\n",
-      "|   |   |--- green >  0.01\n",
-      "|   |   |   |--- class: 1\n",
+      "|   |   |--- class: 1\n",
       "|   |--- red >  0.00\n",
       "|   |   |--- class: 0\n",
-      "|--- green >  0.12\n",
-      "|   |--- green <= 0.13\n",
+      "|--- green >  0.15\n",
+      "|   |--- green <= 0.22\n",
       "|   |   |--- class: 0\n",
-      "|   |--- green >  0.13\n",
+      "|   |--- green >  0.22\n",
       "|   |   |--- class: 0\n",
-      "\n",
-      "\n",
-      "Classification Report:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.99      0.82      0.90       123\n",
-      "           1       0.89      0.99      0.94       172\n",
-      "\n",
-      "    accuracy                           0.92       295\n",
-      "   macro avg       0.94      0.91      0.92       295\n",
-      "weighted avg       0.93      0.92      0.92       295\n",
       "\n"
      ]
     }
@@ -427,7 +425,7 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Train a decision tree\n",
-    "tree_model = DecisionTreeClassifier(max_depth=3, min_samples_split=10, class_weight='balanced', random_state=42)\n",
+    "tree_model = DecisionTreeClassifier(max_depth=2, min_samples_split=10, class_weight='balanced', random_state=42)\n",
     "tree_model.fit(X_train, y_train)\n",
     "\n",
     "# Visualize the decision tree rules\n",
@@ -436,28 +434,40 @@
     "\n",
     "# Make predictions on the test set\n",
     "y_pred = tree_model.predict(X_test)\n",
-    "\n",
-    "# Detailed classification report\n",
-    "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9220338983050848\n",
-      "F1 Score: 0.936986301369863\n",
-      "Precision: 0.8860103626943006\n",
-      "Recall: 0.9941860465116279\n"
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      0.84      0.84       244\n",
+      "           1       0.91      0.92      0.92       455\n",
+      "\n",
+      "    accuracy                           0.89       699\n",
+      "   macro avg       0.88      0.88      0.88       699\n",
+      "weighted avg       0.89      0.89      0.89       699\n",
+      "\n",
+      "Accuracy: 0.8927038626609443\n",
+      "F1 Score: 0.9180327868852459\n",
+      "Precision: 0.9130434782608695\n",
+      "Recall: 0.9230769230769231\n"
      ]
     }
    ],
    "source": [
+    "# Detailed classification report\n",
+    "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))\n",
+    "\n",
     "# Evaluate metrics\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "print(\"F1 Score:\", f1_score(y_test, y_pred))\n",
@@ -467,14 +477,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 Score based on thresholds: 0.7468354430379747\n"
+      "F1 Score based on thresholds: 0.9192139737991266\n"
      ]
     }
    ],
@@ -483,10 +493,9 @@
     "\n",
     "# Define a function to classify based on the thresholds\n",
     "def classify_based_on_thresholds(row):\n",
-    "    if row['green'] <= 0.13:\n",
+    "    if row['green'] <= 0.15:\n",
     "        if row['red'] <= 0.00:\n",
-    "            if row['blue'] <= 0.26:\n",
-    "                return 1  # Class 1 (no clouds)\n",
+    "            return 1  # Class 1 (no clouds)\n",
     "    return 0  # Class 0 (clouds)\n",
     "\n",
     "# Apply the function to the test set\n",
