training new model

--- a/analysis/05_tsi_goes_comparison.ipynb
+++ b/analysis/05_tsi_goes_comparison.ipynb
@@ -68,7 +68,7 @@
    "source": [
     "tsi_ds = xr.open_dataset('/storage/cdalden/goes/surface_obs/total_sky_imager/tsi_skycover_20210901_20230616.nc')\n",
     "\n",
-    "# Select time range and filter between hour 14 and 21 UTC in one step\n",
+    "# Select time range and filter between 8am local and 6pm local (MDT) in one step\n",
     "tsi_ds = tsi_ds.sel(\n",
     "    time=tsi_ds['time'].where(\n",
     "        (tsi_ds['time'] >= start_time) & \n",
