--- a/analysis/05a_tsi_goes_comparison.ipynb
+++ b/analysis/05a_tsi_goes_comparison.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook 5 - Using Total Sky Imager data to pick GOES cloud thresholds\n",
+    "# Notebook 5a - Using Total Sky Imager data to pick GOES cloud thresholds\n",
     "\n",
     "From the Friday Harbor Labs Camera data, we found thresholds using visible reflectivity (green) and infrared (red). This performed well over the San Juan Islands but struggled significantly in mountainous areas with snow and glaciers. Using the decision tree, near IR (blue) was not used because it is unnecessary for precicting cloud cover over ocean/forests. To find the needed threshold combination that will work for those scenes and correctly identify clouds from snow, we will use Total Sky Imager data from Kettle Ponds, Colorado. \n",
     "\n",
@@ -153,9 +153,18 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done with combo\n",
+      "processed and saved RGB file to combined_goes16_C02_C05_C13_rgb_colorado_202304.nc\n"
+     ]
+    }
+   ],
    "source": [
-    "ds = combine_daily_rgb_to_monthly('04', '2023')"
+    "# ds = combine_daily_rgb_to_monthly('04', '2023')"
    ]
   },
   {
