--- a/analysis/04_goes_eval_w_camera.ipynb
+++ b/analysis/04_goes_eval_w_camera.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "[4920 rows x 3 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,18 +306,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'goes_df_july_all' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Combine July and August data\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m goes_df_summer_all = pd.concat([\u001b[43mgoes_df_july_all\u001b[49m, goes_df_aug_all, goes_df_sep_all])\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# Ensure the time indices align\u001b[39;00m\n\u001b[32m      4\u001b[39m data = goes_df_summer_all.join(camera_data, how=\u001b[33m'\u001b[39m\u001b[33minner\u001b[39m\u001b[33m'\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'goes_df_july_all' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "clouds\n",
+      "b     1257\n",
+      "rb     805\n",
+      "s      706\n",
+      "bh     278\n",
+      "sc     142\n",
+      "f       80\n",
+      "sb      62\n",
+      "cb      58\n",
+      "fs      46\n",
+      "sh      24\n",
+      "d       16\n",
+      "h       12\n",
+      "fb      10\n",
+      "hm      10\n",
+      "b!       2\n",
+      "m        2\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
@@ -340,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +483,7 @@
        "[4778 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,6 +560,150 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>green</th>\n",
+       "      <th>blue</th>\n",
+       "      <th>red</th>\n",
+       "      <th>clouds</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.060023</td>\n",
+       "      <td>0.000574</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.060833</td>\n",
+       "      <td>0.007203</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.055563</td>\n",
+       "      <td>0.009413</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.054347</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.053942</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4773</th>\n",
+       "      <td>0.128683</td>\n",
+       "      <td>0.351769</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4774</th>\n",
+       "      <td>0.152290</td>\n",
+       "      <td>0.413954</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4775</th>\n",
+       "      <td>0.145995</td>\n",
+       "      <td>0.426818</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4776</th>\n",
+       "      <td>0.112152</td>\n",
+       "      <td>0.287412</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4777</th>\n",
+       "      <td>0.111366</td>\n",
+       "      <td>0.272400</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4778 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         green      blue  red clouds\n",
+       "0     0.060023  0.000574  0.0      b\n",
+       "1     0.060833  0.007203  0.0      b\n",
+       "2     0.055563  0.009413  0.0      b\n",
+       "3     0.054347  0.000000  0.0      b\n",
+       "4     0.053942  0.000000  0.0      b\n",
+       "...        ...       ...  ...    ...\n",
+       "4773  0.128683  0.351769  0.0      b\n",
+       "4774  0.152290  0.413954  0.0      b\n",
+       "4775  0.145995  0.426818  0.0      b\n",
+       "4776  0.112152  0.287412  0.0      b\n",
+       "4777  0.111366  0.272400  0.0      b\n",
+       "\n",
+       "[4778 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# data.to_csv('/storage/cdalden/goes/washington/goes17/rgb_composite/fhl_camera_goes_pixel_20220713_20220930.csv', index=False)\n",
+    "\n",
+    "data = pd.read_csv('/storage/cdalden/goes/washington/goes17/rgb_composite/fhl_camera_goes_pixel_20220713_20220930.csv')\n",
+    "data"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -555,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -580,11 +737,11 @@
    "source": [
     "# Create binary target variable: 1 if 'clouds' contains 'b' (no clouds), 0 otherwise (clouds)\n",
     "# data['no_clouds'] = (~data['clouds'].str.contains('b')).astype(int)\n",
-    "data['no_clouds'] = (~(data['clouds'] == 'b')).astype(int)\n",
+    "data['cloud_binary'] = (~(data['clouds'] == 'b')).astype(int)\n",
     "\n",
     "# Split into features (X) and target (y)\n",
     "X = data[['red', 'green', 'blue']]  # Replace with your variable names\n",
-    "y = data['no_clouds']  # Binary target variable\n",
+    "y = data['cloud_binary']  # Binary target variable\n",
     "\n",
     "# Train-test split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
@@ -603,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -672,34 +829,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test Scripps TSI derived thresholds"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 Score based on thresholds: 0.10438799076212471\n"
+      "F1 Score: 0.7676549865229111\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.metrics import f1_score\n",
+    "# from sklearn.metrics import f1_score\n",
     "\n",
-    "# Define a function to classify based on the thresholds\n",
-    "def classify_based_on_thresholds(row):\n",
-    "    if row['green'] <= 0.15:\n",
-    "        if row['red'] <= 0.00:\n",
-    "            return 1  # Class 1 (no clouds)\n",
-    "    return 0  # Class 0 (clouds)\n",
+    "red = data['red']\n",
+    "green = data['green']\n",
+    "blue = data['blue']\n",
     "\n",
-    "# Apply the function to the test set\n",
-    "manual_predictions = X_test.apply(classify_based_on_thresholds, axis=1)\n",
+    "# Combine conditions (example: all thresholds must be met)\n",
+    "combined_condition = (green>0.15)\n",
     "\n",
-    "# Calculate the F1 score\n",
-    "f1 = f1_score(y_test, manual_predictions)\n",
-    "print(\"F1 Score based on thresholds:\", f1)"
+    "# Create predictions (1 for positive class, 0 for negative class)\n",
+    "predictions = combined_condition.astype(int)\n",
+    "\n",
+    "# Extract ground truth labels\n",
+    "ground_truth = data['cloud_binary'].values.flatten()  # Flatten to 1D array\n",
+    "predictions = predictions.values.flatten()  # Flatten to 1D array\n",
+    "\n",
+    "# Calculate F1 score\n",
+    "f1 = f1_score(ground_truth, predictions)\n",
+    "\n",
+    "print(f\"F1 Score: {f1}\")"
    ]
   },
   {
