--- a/analysis/01_plot_RGB.ipynb
+++ b/analysis/01_plot_RGB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,219 +173,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T16:00:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T16:05:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T16:10:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T16:15:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T16:20:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T16:25:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T16:30:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T16:35:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T16:40:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T16:45:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T16:50:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T16:55:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T17:00:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T17:05:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T17:10:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T17:15:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T17:20:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T17:25:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T17:30:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T17:35:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T17:40:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T17:45:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T17:50:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T17:55:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T18:00:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T18:05:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T18:10:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T18:15:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T18:20:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T18:25:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T18:30:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T18:35:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T18:40:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T18:45:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T18:50:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T18:55:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T19:00:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T19:05:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T19:10:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T19:15:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T19:20:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T19:25:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T19:30:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T19:35:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T19:40:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T19:45:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T19:50:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T19:55:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T20:00:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T20:05:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T20:10:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T20:15:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T20:20:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T20:25:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T20:30:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T20:35:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T20:40:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T20:45:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T20:50:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T20:55:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T21:00:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T21:05:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T21:10:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T21:15:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T21:20:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T21:25:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T21:30:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T21:35:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T21:40:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T21:45:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T21:50:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T21:55:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T22:00:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T22:05:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T22:10:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T22:15:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T22:20:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T22:25:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T22:30:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T22:35:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T22:40:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T22:45:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T22:50:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T22:55:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T23:00:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T23:05:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T23:10:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T23:15:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T23:20:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T23:25:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T23:30:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T23:35:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T23:40:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T23:45:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T23:50:00\n",
-      "Applying cloud mask...\n",
-      "Generated RGB image for 2022-07-21T23:55:00\n"
+      "Generated RGB image for 2023-06-07T16:00:00\n",
+      "Generated RGB image for 2023-06-07T16:05:00\n",
+      "Generated RGB image for 2023-06-07T16:10:00\n",
+      "Generated RGB image for 2023-06-07T16:15:00\n",
+      "Generated RGB image for 2023-06-07T16:20:00\n",
+      "Generated RGB image for 2023-06-07T16:25:00\n",
+      "Generated RGB image for 2023-06-07T16:30:00\n",
+      "Generated RGB image for 2023-06-07T16:35:00\n",
+      "Generated RGB image for 2023-06-07T16:40:00\n",
+      "Generated RGB image for 2023-06-07T16:45:00\n",
+      "Generated RGB image for 2023-06-07T16:50:00\n",
+      "Generated RGB image for 2023-06-07T16:55:00\n",
+      "Generated RGB image for 2023-06-07T17:00:00\n",
+      "Generated RGB image for 2023-06-07T17:05:00\n",
+      "Generated RGB image for 2023-06-07T17:10:00\n",
+      "Generated RGB image for 2023-06-07T17:15:00\n",
+      "Generated RGB image for 2023-06-07T17:20:00\n",
+      "Generated RGB image for 2023-06-07T17:25:00\n",
+      "Generated RGB image for 2023-06-07T17:30:00\n",
+      "Generated RGB image for 2023-06-07T17:35:00\n",
+      "Generated RGB image for 2023-06-07T17:40:00\n",
+      "Generated RGB image for 2023-06-07T17:45:00\n",
+      "Generated RGB image for 2023-06-07T17:50:00\n",
+      "Generated RGB image for 2023-06-07T17:55:00\n",
+      "Generated RGB image for 2023-06-07T18:00:00\n",
+      "Generated RGB image for 2023-06-07T18:05:00\n",
+      "Generated RGB image for 2023-06-07T18:10:00\n",
+      "Generated RGB image for 2023-06-07T18:15:00\n",
+      "Generated RGB image for 2023-06-07T18:20:00\n",
+      "Generated RGB image for 2023-06-07T18:25:00\n",
+      "Generated RGB image for 2023-06-07T18:30:00\n",
+      "Generated RGB image for 2023-06-07T18:35:00\n",
+      "Generated RGB image for 2023-06-07T18:40:00\n",
+      "Generated RGB image for 2023-06-07T18:45:00\n",
+      "Generated RGB image for 2023-06-07T18:50:00\n",
+      "Generated RGB image for 2023-06-07T18:55:00\n",
+      "Generated RGB image for 2023-06-07T19:00:00\n",
+      "Generated RGB image for 2023-06-07T19:05:00\n",
+      "Generated RGB image for 2023-06-07T19:10:00\n",
+      "Generated RGB image for 2023-06-07T19:15:00\n",
+      "Generated RGB image for 2023-06-07T19:20:00\n",
+      "Generated RGB image for 2023-06-07T19:25:00\n",
+      "Generated RGB image for 2023-06-07T19:30:00\n",
+      "Generated RGB image for 2023-06-07T19:35:00\n",
+      "Generated RGB image for 2023-06-07T19:40:00\n",
+      "Generated RGB image for 2023-06-07T19:45:00\n",
+      "Generated RGB image for 2023-06-07T19:50:00\n",
+      "Generated RGB image for 2023-06-07T19:55:00\n",
+      "Generated RGB image for 2023-06-07T20:00:00\n",
+      "Generated RGB image for 2023-06-07T20:05:00\n",
+      "Generated RGB image for 2023-06-07T20:10:00\n",
+      "Generated RGB image for 2023-06-07T20:15:00\n",
+      "Generated RGB image for 2023-06-07T20:20:00\n",
+      "Generated RGB image for 2023-06-07T20:25:00\n",
+      "Generated RGB image for 2023-06-07T20:30:00\n",
+      "Generated RGB image for 2023-06-07T20:35:00\n",
+      "Generated RGB image for 2023-06-07T20:40:00\n",
+      "Generated RGB image for 2023-06-07T20:45:00\n",
+      "Generated RGB image for 2023-06-07T20:50:00\n",
+      "Generated RGB image for 2023-06-07T20:55:00\n",
+      "Generated RGB image for 2023-06-07T21:00:00\n",
+      "Generated RGB image for 2023-06-07T21:05:00\n",
+      "Generated RGB image for 2023-06-07T21:10:00\n",
+      "Generated RGB image for 2023-06-07T21:15:00\n",
+      "Generated RGB image for 2023-06-07T21:20:00\n",
+      "Generated RGB image for 2023-06-07T21:25:00\n",
+      "Generated RGB image for 2023-06-07T21:30:00\n",
+      "Generated RGB image for 2023-06-07T21:35:00\n",
+      "Generated RGB image for 2023-06-07T21:40:00\n",
+      "Generated RGB image for 2023-06-07T21:45:00\n",
+      "Generated RGB image for 2023-06-07T21:50:00\n",
+      "Generated RGB image for 2023-06-07T21:55:00\n",
+      "Generated RGB image for 2023-06-07T22:00:00\n",
+      "Generated RGB image for 2023-06-07T22:05:00\n",
+      "Generated RGB image for 2023-06-07T22:10:00\n",
+      "Generated RGB image for 2023-06-07T22:15:00\n",
+      "Generated RGB image for 2023-06-07T22:20:00\n",
+      "Generated RGB image for 2023-06-07T22:25:00\n",
+      "Generated RGB image for 2023-06-07T22:30:00\n",
+      "Generated RGB image for 2023-06-07T22:35:00\n",
+      "Generated RGB image for 2023-06-07T22:40:00\n",
+      "Generated RGB image for 2023-06-07T22:45:00\n",
+      "Generated RGB image for 2023-06-07T22:50:00\n",
+      "Generated RGB image for 2023-06-07T22:55:00\n",
+      "Generated RGB image for 2023-06-07T23:00:00\n"
      ]
     }
    ],
    "source": [
-    "date = '20220721'\n",
+    "date = '20230607'\n",
     "start_time = '1600'\n",
-    "end_time = '2355'\n",
-    "state = 'colorado'\n",
+    "end_time = '2300'\n",
+    "domain = 'scripps'\n",
     "\n",
-    "path = '/storage/cdalden/goes/colorado/goes16/rgb_composite/'\n",
-    "file = f'goes16_C02_C05_C13_rgb_{state}_{date}.nc'\n",
+    "path = '/storage/cdalden/goes/scripps/goes18/rgb_composite/'\n",
+    "file = f'goes18_C02_C05_C13_rgb_{domain}_{date}.nc'\n",
     "ds = xr.open_dataset(path+file)\n",
     "\n",
-    "make_gif(ds, date, start_time, end_time, state, mask=True)"
+    "make_gif(ds, date, start_time, end_time, domain, mask=False)"
    ]
   },
   {
