--- a/analysis/06b_cloud_frequency_colorado.ipynb
+++ b/analysis/06b_cloud_frequency_colorado.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -133,44 +133,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "appended for 20230201\n",
-      "appended for 20230202\n",
-      "appended for 20230203\n",
-      "appended for 20230204\n",
-      "appended for 20230205\n",
-      "appended for 20230206\n",
-      "appended for 20230207\n",
-      "appended for 20230208\n",
-      "appended for 20230209\n",
-      "appended for 20230210\n",
-      "appended for 20230211\n",
-      "appended for 20230212\n",
-      "appended for 20230213\n",
-      "appended for 20230214\n",
-      "appended for 20230215\n",
-      "appended for 20230216\n",
-      "appended for 20230217\n",
-      "appended for 20230218\n",
-      "appended for 20230219\n",
-      "appended for 20230220\n",
-      "appended for 20230221\n",
-      "appended for 20230222\n",
-      "appended for 20230223\n",
-      "appended for 20230224\n",
-      "appended for 20230225\n",
-      "appended for 20230226\n",
-      "appended for 20230227\n",
-      "appended for 20230228\n",
-      "done with concatenation\n"
+      "appended for 20220401\n",
+      "appended for 20220402\n",
+      "appended for 20220403\n",
+      "appended for 20220404\n",
+      "appended for 20220405\n",
+      "appended for 20220406\n",
+      "appended for 20220407\n",
+      "appended for 20220408\n",
+      "appended for 20220409\n",
+      "appended for 20220410\n",
+      "appended for 20220411\n",
+      "appended for 20220412\n",
+      "appended for 20220413\n",
+      "appended for 20220414\n",
+      "appended for 20220415\n",
+      "appended for 20220416\n",
+      "appended for 20220417\n",
+      "appended for 20220418\n",
+      "appended for 20220419\n",
+      "appended for 20220420\n",
+      "appended for 20220421\n",
+      "appended for 20220422\n",
+      "appended for 20220423\n",
+      "appended for 20220424\n",
+      "appended for 20220425\n",
+      "appended for 20220426\n",
+      "appended for 20220427\n",
+      "appended for 20220428\n",
+      "appended for 20220429\n",
+      "appended for 20220430\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
    "source": [
-    "year = '2023'\n",
+    "year = '2022'\n",
     "state = 'colorado'\n",
     "goes = 'goes16'\n",
     "# months_list = ['06', '07', '08', '09']\n",
-    "months_list = ['02']\n",
+    "months_list = ['04']\n",
     "for month in months_list:\n",
     "    daily_cloud_frequency(year,month, state, goes)"
    ]
