--- a/analysis/01_plot_RGB.ipynb
+++ b/analysis/01_plot_RGB.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,140 +189,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated RGB image for 2022-05-03T14:00:00\n",
-      "Generated RGB image for 2022-05-03T14:05:00\n",
-      "Generated RGB image for 2022-05-03T14:10:00\n",
-      "Generated RGB image for 2022-05-03T14:15:00\n",
-      "Generated RGB image for 2022-05-03T14:20:00\n",
-      "Generated RGB image for 2022-05-03T14:25:00\n",
-      "Generated RGB image for 2022-05-03T14:30:00\n",
-      "Generated RGB image for 2022-05-03T14:35:00\n",
-      "Generated RGB image for 2022-05-03T14:40:00\n",
-      "Generated RGB image for 2022-05-03T14:45:00\n",
-      "Generated RGB image for 2022-05-03T14:50:00\n",
-      "Generated RGB image for 2022-05-03T14:55:00\n",
-      "Generated RGB image for 2022-05-03T15:00:00\n",
-      "Generated RGB image for 2022-05-03T15:05:00\n",
-      "Generated RGB image for 2022-05-03T15:10:00\n",
-      "Generated RGB image for 2022-05-03T15:15:00\n",
-      "Generated RGB image for 2022-05-03T15:20:00\n",
-      "Generated RGB image for 2022-05-03T15:25:00\n",
-      "Generated RGB image for 2022-05-03T15:30:00\n",
-      "Generated RGB image for 2022-05-03T15:35:00\n",
-      "Generated RGB image for 2022-05-03T15:40:00\n",
-      "Generated RGB image for 2022-05-03T15:45:00\n",
-      "Generated RGB image for 2022-05-03T15:50:00\n",
-      "Generated RGB image for 2022-05-03T15:55:00\n",
-      "Generated RGB image for 2022-05-03T16:00:00\n",
-      "Generated RGB image for 2022-05-03T16:05:00\n",
-      "Generated RGB image for 2022-05-03T16:10:00\n",
-      "Generated RGB image for 2022-05-03T16:15:00\n",
-      "Generated RGB image for 2022-05-03T16:20:00\n",
-      "Generated RGB image for 2022-05-03T16:25:00\n",
-      "Generated RGB image for 2022-05-03T16:30:00\n",
-      "Generated RGB image for 2022-05-03T16:35:00\n",
-      "Generated RGB image for 2022-05-03T16:40:00\n",
-      "Generated RGB image for 2022-05-03T16:45:00\n",
-      "Generated RGB image for 2022-05-03T16:50:00\n",
-      "Generated RGB image for 2022-05-03T16:55:00\n",
-      "Generated RGB image for 2022-05-03T17:00:00\n",
-      "Generated RGB image for 2022-05-03T17:05:00\n",
-      "Generated RGB image for 2022-05-03T17:10:00\n",
-      "Generated RGB image for 2022-05-03T17:15:00\n",
-      "Generated RGB image for 2022-05-03T17:20:00\n",
-      "Generated RGB image for 2022-05-03T17:25:00\n",
-      "Generated RGB image for 2022-05-03T17:30:00\n",
-      "Generated RGB image for 2022-05-03T17:35:00\n",
-      "Generated RGB image for 2022-05-03T17:40:00\n",
-      "Generated RGB image for 2022-05-03T17:45:00\n",
-      "Generated RGB image for 2022-05-03T17:50:00\n",
-      "Generated RGB image for 2022-05-03T17:55:00\n",
-      "Generated RGB image for 2022-05-03T18:00:00\n",
-      "Generated RGB image for 2022-05-03T18:05:00\n",
-      "Generated RGB image for 2022-05-03T18:10:00\n",
-      "Generated RGB image for 2022-05-03T18:15:00\n",
-      "Generated RGB image for 2022-05-03T18:20:00\n",
-      "Generated RGB image for 2022-05-03T18:25:00\n",
-      "Generated RGB image for 2022-05-03T18:30:00\n",
-      "Generated RGB image for 2022-05-03T18:35:00\n",
-      "Generated RGB image for 2022-05-03T18:40:00\n",
-      "Generated RGB image for 2022-05-03T18:45:00\n",
-      "Generated RGB image for 2022-05-03T18:50:00\n",
-      "Generated RGB image for 2022-05-03T18:55:00\n",
-      "Generated RGB image for 2022-05-03T19:00:00\n",
-      "Generated RGB image for 2022-05-03T19:05:00\n",
-      "Generated RGB image for 2022-05-03T19:10:00\n",
-      "Generated RGB image for 2022-05-03T19:15:00\n",
-      "Generated RGB image for 2022-05-03T19:20:00\n",
-      "Generated RGB image for 2022-05-03T19:25:00\n",
-      "Generated RGB image for 2022-05-03T19:30:00\n",
-      "Generated RGB image for 2022-05-03T19:35:00\n",
-      "Generated RGB image for 2022-05-03T19:40:00\n",
-      "Generated RGB image for 2022-05-03T19:45:00\n",
-      "Generated RGB image for 2022-05-03T19:50:00\n",
-      "Generated RGB image for 2022-05-03T19:55:00\n",
-      "Generated RGB image for 2022-05-03T20:00:00\n",
-      "Generated RGB image for 2022-05-03T20:05:00\n",
-      "Generated RGB image for 2022-05-03T20:10:00\n",
-      "Generated RGB image for 2022-05-03T20:15:00\n",
-      "Generated RGB image for 2022-05-03T20:20:00\n",
-      "Generated RGB image for 2022-05-03T20:25:00\n",
-      "Generated RGB image for 2022-05-03T20:30:00\n",
-      "Generated RGB image for 2022-05-03T20:35:00\n",
-      "Generated RGB image for 2022-05-03T20:40:00\n",
-      "Generated RGB image for 2022-05-03T20:45:00\n",
-      "Generated RGB image for 2022-05-03T20:50:00\n",
-      "Generated RGB image for 2022-05-03T20:55:00\n",
-      "Generated RGB image for 2022-05-03T21:00:00\n",
-      "Generated RGB image for 2022-05-03T21:05:00\n",
-      "Generated RGB image for 2022-05-03T21:10:00\n",
-      "Generated RGB image for 2022-05-03T21:15:00\n",
-      "Generated RGB image for 2022-05-03T21:20:00\n",
-      "Generated RGB image for 2022-05-03T21:25:00\n",
-      "Generated RGB image for 2022-05-03T21:30:00\n",
-      "Generated RGB image for 2022-05-03T21:35:00\n",
-      "Generated RGB image for 2022-05-03T21:40:00\n",
-      "Generated RGB image for 2022-05-03T21:45:00\n",
-      "Generated RGB image for 2022-05-03T21:50:00\n",
-      "Generated RGB image for 2022-05-03T21:55:00\n",
-      "Generated RGB image for 2022-05-03T22:00:00\n",
-      "Generated RGB image for 2022-05-03T22:05:00\n",
-      "Generated RGB image for 2022-05-03T22:10:00\n",
-      "Generated RGB image for 2022-05-03T22:15:00\n",
-      "Generated RGB image for 2022-05-03T22:20:00\n",
-      "Generated RGB image for 2022-05-03T22:25:00\n",
-      "Generated RGB image for 2022-05-03T22:30:00\n",
-      "Generated RGB image for 2022-05-03T22:35:00\n",
-      "Generated RGB image for 2022-05-03T22:40:00\n",
-      "Generated RGB image for 2022-05-03T22:45:00\n",
-      "Generated RGB image for 2022-05-03T22:50:00\n",
-      "Generated RGB image for 2022-05-03T22:55:00\n",
-      "Generated RGB image for 2022-05-03T23:00:00\n",
-      "Generated RGB image for 2022-05-03T23:05:00\n",
-      "Generated RGB image for 2022-05-03T23:10:00\n",
-      "Generated RGB image for 2022-05-03T23:15:00\n",
-      "Generated RGB image for 2022-05-03T23:20:00\n",
-      "Generated RGB image for 2022-05-03T23:25:00\n",
-      "Generated RGB image for 2022-05-03T23:30:00\n",
-      "Generated RGB image for 2022-05-03T23:35:00\n",
-      "Generated RGB image for 2022-05-03T23:40:00\n",
-      "Generated RGB image for 2022-05-03T23:45:00\n",
-      "Generated RGB image for 2022-05-03T23:50:00\n",
-      "Generated RGB image for 2022-05-03T23:55:00\n"
+      "Generated RGB image for 2023-05-08T14:00:00\n",
+      "Generated RGB image for 2023-05-08T14:05:00\n",
+      "Generated RGB image for 2023-05-08T14:10:00\n",
+      "Generated RGB image for 2023-05-08T14:15:00\n",
+      "Generated RGB image for 2023-05-08T14:20:00\n",
+      "Generated RGB image for 2023-05-08T14:25:00\n",
+      "Generated RGB image for 2023-05-08T14:30:00\n",
+      "Generated RGB image for 2023-05-08T14:35:00\n",
+      "Generated RGB image for 2023-05-08T14:40:00\n",
+      "Generated RGB image for 2023-05-08T14:45:00\n",
+      "Generated RGB image for 2023-05-08T14:50:00\n",
+      "Generated RGB image for 2023-05-08T14:55:00\n",
+      "Generated RGB image for 2023-05-08T15:00:00\n",
+      "Generated RGB image for 2023-05-08T15:05:00\n",
+      "Generated RGB image for 2023-05-08T15:10:00\n",
+      "Generated RGB image for 2023-05-08T15:15:00\n",
+      "Generated RGB image for 2023-05-08T15:20:00\n",
+      "Generated RGB image for 2023-05-08T15:25:00\n",
+      "Generated RGB image for 2023-05-08T15:30:00\n",
+      "Generated RGB image for 2023-05-08T15:35:00\n",
+      "Generated RGB image for 2023-05-08T15:40:00\n",
+      "Generated RGB image for 2023-05-08T15:45:00\n",
+      "Generated RGB image for 2023-05-08T15:50:00\n",
+      "Generated RGB image for 2023-05-08T15:55:00\n",
+      "Generated RGB image for 2023-05-08T16:00:00\n",
+      "Generated RGB image for 2023-05-08T16:05:00\n",
+      "Generated RGB image for 2023-05-08T16:10:00\n",
+      "Generated RGB image for 2023-05-08T16:15:00\n",
+      "Generated RGB image for 2023-05-08T16:20:00\n",
+      "Generated RGB image for 2023-05-08T16:25:00\n",
+      "Generated RGB image for 2023-05-08T16:30:00\n",
+      "Generated RGB image for 2023-05-08T16:35:00\n",
+      "Generated RGB image for 2023-05-08T16:40:00\n",
+      "Generated RGB image for 2023-05-08T16:45:00\n",
+      "Generated RGB image for 2023-05-08T16:50:00\n",
+      "Generated RGB image for 2023-05-08T16:55:00\n",
+      "Generated RGB image for 2023-05-08T17:00:00\n",
+      "Generated RGB image for 2023-05-08T17:05:00\n",
+      "Generated RGB image for 2023-05-08T17:10:00\n",
+      "Generated RGB image for 2023-05-08T17:15:00\n",
+      "Generated RGB image for 2023-05-08T17:20:00\n",
+      "Generated RGB image for 2023-05-08T17:25:00\n",
+      "Generated RGB image for 2023-05-08T17:30:00\n",
+      "Generated RGB image for 2023-05-08T17:35:00\n",
+      "Generated RGB image for 2023-05-08T17:40:00\n",
+      "Generated RGB image for 2023-05-08T17:45:00\n",
+      "Generated RGB image for 2023-05-08T17:50:00\n",
+      "Generated RGB image for 2023-05-08T17:55:00\n",
+      "Generated RGB image for 2023-05-08T18:00:00\n",
+      "Generated RGB image for 2023-05-08T18:05:00\n",
+      "Generated RGB image for 2023-05-08T18:10:00\n",
+      "Generated RGB image for 2023-05-08T18:15:00\n",
+      "Generated RGB image for 2023-05-08T18:20:00\n",
+      "Generated RGB image for 2023-05-08T18:25:00\n",
+      "Generated RGB image for 2023-05-08T18:30:00\n",
+      "Generated RGB image for 2023-05-08T18:35:00\n",
+      "Generated RGB image for 2023-05-08T18:40:00\n",
+      "Generated RGB image for 2023-05-08T18:45:00\n",
+      "Generated RGB image for 2023-05-08T18:50:00\n",
+      "Generated RGB image for 2023-05-08T18:55:00\n",
+      "Generated RGB image for 2023-05-08T19:00:00\n",
+      "Generated RGB image for 2023-05-08T19:05:00\n",
+      "Generated RGB image for 2023-05-08T19:10:00\n",
+      "Generated RGB image for 2023-05-08T19:15:00\n",
+      "Generated RGB image for 2023-05-08T19:20:00\n",
+      "Generated RGB image for 2023-05-08T19:25:00\n",
+      "Generated RGB image for 2023-05-08T19:30:00\n",
+      "Generated RGB image for 2023-05-08T19:35:00\n",
+      "Generated RGB image for 2023-05-08T19:40:00\n",
+      "Generated RGB image for 2023-05-08T19:45:00\n",
+      "Generated RGB image for 2023-05-08T19:50:00\n",
+      "Generated RGB image for 2023-05-08T19:55:00\n",
+      "Generated RGB image for 2023-05-08T20:00:00\n",
+      "Generated RGB image for 2023-05-08T20:05:00\n",
+      "Generated RGB image for 2023-05-08T20:10:00\n",
+      "Generated RGB image for 2023-05-08T20:15:00\n",
+      "Generated RGB image for 2023-05-08T20:20:00\n",
+      "Generated RGB image for 2023-05-08T20:25:00\n",
+      "Generated RGB image for 2023-05-08T20:30:00\n",
+      "Generated RGB image for 2023-05-08T20:35:00\n",
+      "Generated RGB image for 2023-05-08T20:40:00\n",
+      "Generated RGB image for 2023-05-08T20:45:00\n",
+      "Generated RGB image for 2023-05-08T20:50:00\n",
+      "Generated RGB image for 2023-05-08T20:55:00\n",
+      "Generated RGB image for 2023-05-08T21:00:00\n",
+      "Generated RGB image for 2023-05-08T21:05:00\n",
+      "Generated RGB image for 2023-05-08T21:10:00\n",
+      "Generated RGB image for 2023-05-08T21:15:00\n",
+      "Generated RGB image for 2023-05-08T21:20:00\n",
+      "Generated RGB image for 2023-05-08T21:25:00\n",
+      "Generated RGB image for 2023-05-08T21:30:00\n",
+      "Generated RGB image for 2023-05-08T21:35:00\n",
+      "Generated RGB image for 2023-05-08T21:40:00\n",
+      "Generated RGB image for 2023-05-08T21:45:00\n",
+      "Generated RGB image for 2023-05-08T21:50:00\n",
+      "Generated RGB image for 2023-05-08T21:55:00\n",
+      "Generated RGB image for 2023-05-08T22:00:00\n",
+      "Generated RGB image for 2023-05-08T22:05:00\n",
+      "Generated RGB image for 2023-05-08T22:10:00\n",
+      "Generated RGB image for 2023-05-08T22:15:00\n",
+      "Generated RGB image for 2023-05-08T22:20:00\n",
+      "Generated RGB image for 2023-05-08T22:25:00\n",
+      "Generated RGB image for 2023-05-08T22:30:00\n",
+      "Generated RGB image for 2023-05-08T22:35:00\n",
+      "Generated RGB image for 2023-05-08T22:40:00\n",
+      "Generated RGB image for 2023-05-08T22:45:00\n",
+      "Generated RGB image for 2023-05-08T22:50:00\n",
+      "Generated RGB image for 2023-05-08T22:55:00\n",
+      "Generated RGB image for 2023-05-08T23:00:00\n",
+      "Generated RGB image for 2023-05-08T23:05:00\n",
+      "Generated RGB image for 2023-05-08T23:10:00\n",
+      "Generated RGB image for 2023-05-08T23:15:00\n",
+      "Generated RGB image for 2023-05-08T23:20:00\n",
+      "Generated RGB image for 2023-05-08T23:25:00\n",
+      "Generated RGB image for 2023-05-08T23:30:00\n",
+      "Generated RGB image for 2023-05-08T23:35:00\n",
+      "Generated RGB image for 2023-05-08T23:40:00\n",
+      "Generated RGB image for 2023-05-08T23:45:00\n",
+      "Generated RGB image for 2023-05-08T23:50:00\n",
+      "Generated RGB image for 2023-05-08T23:55:00\n"
      ]
     }
    ],
    "source": [
-    "for i in range(3,4): \n",
+    "for i in range(8,9): \n",
     "    day = str(i).zfill(2)\n",
-    "    date = '202205' + day\n",
+    "    date = '202305' + day\n",
     "    start_time = '1400'\n",
     "    end_time = '2355'\n",
     "    state = 'colorado'\n",
@@ -331,7 +331,7 @@
     "    file = f'goes16_C02_C05_C13_rgb_{state}_{date}.nc'\n",
     "    ds = xr.open_dataset(path+file)\n",
     "\n",
-    "    make_gif(ds, date, start_time, end_time, subset=state, mask=False)"
+    "    make_gif(ds, date, start_time, end_time, subset='east_river', mask=False)"
    ]
   },
   {
